--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "jquery": "^3.1.1",
+    "jquery-validation": "^1.16.0",
     "materialize-css": "^0.97.8"
   }
 }
